update feat BookLocation
