# backend/docs/swagger.json
@@ -212,6 +212,44 @@
                 }
             }
         },
+        "/book-locations": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "book-locations"
+                ],
+                "summary": "Create Book Location",
+                "parameters": [
+                    {
+                        "description": "Create Book Location",
+                        "name": "bookLocation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/booklocationmodel.ReqCreateBookLocation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Created book location",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResSuccess"
+                        }
+                    }
+                }
+            }
+        },
         "/books": {
             "get": {
                 "security": [
@@ -3697,6 +3735,23 @@
                 "name": {
                     "type": "string",
                     "example": "Nguyễn Văn A"
+                }
+            }
+        },
+        "booklocationmodel.ReqCreateBookLocation": {
+            "type": "object",
+            "properties": {
+                "bookId": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "qrCodePath": {
+                    "type": "string"
                 }
             }
         },
