# backend/module/booklocation/booklocationtransport/route.go
@@ -1,0 +1,21 @@
+package booklocationtransport
+
+import (
+	"book-store-management-backend/component/appctx"
+	"book-store-management-backend/middleware"
+	"github.com/gin-gonic/gin"
+)
+
+func SetupRoutes(router *gin.RouterGroup, appCtx appctx.AppContext) {
+	// Grouping the routes under "/book-locations"
+	bookLocations := router.Group("/book-locations", middleware.RequireAuth(appCtx))
+	{
+		// Create a new book location
+		bookLocations.POST("", CreateBookLocation(appCtx))
+	}
+	//bookLocations := router.Group("/book-locations")
+	//{
+	//	// Create a new book location
+	//	bookLocations.POST("", CreateBookLocation(appCtx))
+	//}
+}
